--- a/index.html
+++ b/index.html
@@ -8,54 +8,65 @@
 </head>
 
 <body>
-  
+
     <div id="blkbox">
-        <div class="container">
-            <header>
-                <img src="logo.png" width="200" height="90">
-                <h2>Taking Booleaners from A to B</h2>
-            </header>
 
-            <nav>
-                <div class="nav-box">
-                        <input type="button" value="Prenota">
-                        <input type="button" value="Termina prenotazione">
-                        <input type="button" value="Accendi Luci">
+        <header>
+            <img src="logo.png" width="200" height="90">
+            <h1>Taking Booleaners from A to B</h1>
+        </header>
+    
+        <nav>
+            <div class="nav-box">
+                <input type="button" value="Prenota">
+                <input type="button" value="Termina prenotazione">
+                <input type="button" value="Accendi Luci">
+            </div>
+        </nav>
+
+        <main>
+            <section>
+                <h2>
+                    <input type="checkbox"> Monopattino Gino22
+                </h2>
+                <div>
+                    &#8614;Via Guadalametri - a 220 metri da te
                 </div>
-            </nav>
+                <div>
+                    Stato carica:
+                </div>
+                <div class="carica1"></div>
+            </section>
 
-            <main>
-                <section>
-                    <input type="checkbox">
-                    <span class="title">Monopattino Gino22</span>
-                    <br>
-                    <span>&#8614;Via Guadalametri - a 220 metri da te</span>
-                    <br>
-                    <span>Stato carica:</span>
-                    <div class="carica1"></div>
-                </section>
+            <section>
+                <h2>
+                    <input type="checkbox"> Monopattino Gino22
+                </h2>
+                <div>
+                    &#8614;Via Guadalametri - a 220 metri da te
+                </div>
+                <div>
+                    Stato carica:
+                </div>
+                <div class="carica2"></div>
+            </section>
 
-                <section>
-                    <input type="checkbox">
-                    <span class="title">Monopattino Gino22</span>
-                    <br>
-                    <span>&#8614;Via Guadalametri - a 220 metri da te</span>
-                    <br>
-                    <span>Stato carica:</span>
-                    <div class="carica2"></div>
-                </section>
+            <section>
+                <h2>
+                    <input type="checkbox"> Monopattino Gino22
+                </h2>
+                <div>
+                    &#8614;Via Guadalametri - a 220 metri da te
+                </div>
+                <div>
+                    Stato carica:
+                </div>
+                <div class="carica3"></div>
+            </section>
 
-                <section>
-                    <input type="checkbox">
-                    <span class="title">Monopattino Gino22</span>
-                    <br>
-                    <span>&#8614;Via Guadalametri - a 220 metri da te</span>
-                    <br>
-                    <span>Stato carica:</span>
-                    <div class="carica3"></div>
-                </section>
-            </main>
-        </div>
-    </div>    
+        </main>
+
+    </div> 
+
 </body>
 </html>
